Add and delete item done

--- a/views/list.ejs
+++ b/views/list.ejs
@@ -1,13 +1,14 @@
 <%- include("header") -%> 
     <div class="box" id="heading"><h1><%= kindOfDay%> </h1></div>
     <div class="box">
-        
-            <% for(var i=0;i<newListItems.length;i++){ %>  
+        <% newListItems.forEach(function(item){ %>
+            <form action="/delete" method="post">
             <div class="item">
-            <input type="checkbox">
-               <p> <%= newListItems[i].name%></p> 
+                <input type="checkbox" name="checkbox" value="<%= item._id %> " onchange="this.form.submit()">
+                <p> <%= item.name%></p> 
             </div>
-           <% } %>   
+            </form>
+       <%  }) %>   
         <form class="item" action="/" method="post" >
             <input type="text" name="newitem" placeholder="New item">
             <button type="submit" name="submit">+</button>
